--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" type="image/png" href="" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Budget App</title>
   </head>
 
