Styled the application

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="icon" type="image/png" href="" />
     <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
-    <title>Budget App</title>
+    <title>budgedo</title>
   </head>
 
   <body>
